--- a/index-gem.html
+++ b/index-gem.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indo-Asia Trade eXchange (ITX) - Cầu Nối Thương Mại Châu Á</title>
+    <title>Indo-Asia Trade eXchange (ITX) - Cầu Nối Thương Mại Châu Á | ITXEasy.com</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Indo-Asia Trade eXchange (ITX) chuyên cung cấp dịch vụ xuất nhập khẩu và giải pháp thương mại khu vực tại Đông Nam Á, đặc biệt từ Việt Nam ra thế giới. Kết nối thị trường, mang đến giá trị vượt trội.">
-    <meta name="keywords" content="xuất khẩu Việt Nam, nhập khẩu Đông Nam Á, dịch vụ thương mại quốc tế, ITX, Indo-Asia Trade eXchange, xuất nhập khẩu, giải pháp thương mại, nông sản, thủy sản, thủ công mỹ nghệ">
-    <link rel="canonical" href="https://yourwebsite.com/"> <!-- Replace with your actual website URL -->
+    <meta name="description" content="Indo-Asia Trade eXchange (ITX) chuyên cung cấp dịch vụ xuất nhập khẩu và giải pháp thương mại khu vực tại Đông Nam Á, đặc biệt từ Việt Nam ra thế giới. Truy cập ITXEasy.com để kết nối thị trường và nhận tư vấn hiệu quả qua số điện thoại +84775568646.">
+    <meta name="keywords" content="xuất khẩu Việt Nam, nhập khẩu Đông Nam Á, dịch vụ thương mại quốc tế, ITX, Indo-Asia Trade eXchange, xuất nhập khẩu, giải pháp thương mại, nông sản, thủy sản, thủ công mỹ nghệ, ITXEasy.com, +84775568646">
+    <link rel="canonical" href="https://www.itxeasy.com/"> <!-- Cập nhật URL tên miền mới -->
 
     <!-- Open Graph / Facebook Meta Tags -->
-    <meta property="og:title" content="Indo-Asia Trade eXchange (ITX) - Cầu Nối Thương Mại Châu Á">
-    <meta property="og:description" content="ITX chuyên cung cấp dịch vụ xuất nhập khẩu và giải pháp thương mại khu vực tại Đông Nam Á, đặc biệt từ Việt Nam ra thế giới.">
-    <meta property="og:image" content="https://placehold.co/1200x630/4f46e5/ffffff?text=ITX+Trade+Exchange"> <!-- Replace with your company logo or a relevant image -->
-    <meta property="og:url" content="https://yourwebsite.com/"> <!-- Replace with your actual website URL -->
+    <meta property="og:title" content="Indo-Asia Trade eXchange (ITX) - Cầu Nối Thương Mại Châu Á | ITXEasy.com">
+    <meta property="og:description" content="ITX chuyên cung cấp dịch vụ xuất nhập khẩu và giải pháp thương mại khu vực tại Đông Nam Á, đặc biệt từ Việt Nam ra thế giới. Liên hệ +847755686646.">
+    <meta property="og:image" content="https://placehold.co/1200x630/4f46e5/ffffff?text=ITX+Trade+Exchange"> <!-- Vẫn giữ hình ảnh placeholder, bạn có thể thay đổi sau -->
+    <meta property="og:url" content="https://www.itxeasy.com/"> <!-- Cập nhật URL tên miền mới -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Indo-Asia Trade eXchange (ITX)">
     <meta property="og:locale" content="vi_VN">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@ITXTrade"> <!-- Replace with your Twitter handle if you have one -->
-    <meta name="twitter:title" content="Indo-Asia Trade eXchange (ITX) - Cầu Nối Thương Mại Châu Á">
-    <meta name="twitter:description" content="ITX chuyên cung cấp dịch vụ xuất nhập khẩu và giải pháp thương mại khu vực tại Đông Nam Á, đặc biệt từ Việt Nam ra thế giới.">
-    <meta name="twitter:image" content="https://placehold.co/1200x630/4f46e5/ffffff?text=ITX+Trade+Exchange"> <!-- Replace with your company logo or a relevant image -->
+    <meta name="twitter:site" content="@ITXEasy"> <!-- Thay thế bằng Twitter handle của bạn nếu có -->
+    <meta name="twitter:title" content="Indo-Asia Trade eXchange (ITX) - Cầu Nối Thương Mại Châu Á | ITXEasy.com">
+    <meta name="twitter:description" content="ITX chuyên cung cấp dịch vụ xuất nhập khẩu và giải pháp thương mại khu vực tại Đông Nam Á, đặc biệt từ Việt Nam ra thế giới. Liên hệ +847755686646.">
+    <meta name="twitter:image" content="https://placehold.co/1200x630/4f46e5/ffffff?text=ITX+Trade+Exchange"> <!-- Vẫn giữ hình ảnh placeholder, bạn có thể thay đổi sau -->
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -235,7 +235,7 @@
                         </div>
                         <div>
                             <label for="email" class="block text-left text-lg font-medium text-slate-700 mb-2">Email</label>
-                            <input type="email" id="email" name="email" placeholder="email@example.com" class="w-full px-4 py-3 border border-slate-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500 transition duration-200">
+                            <input type="email" id="email" name="email" placeholder="email@itxeasy.com" class="w-full px-4 py-3 border border-slate-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500 transition duration-200">
                         </div>
                         <div>
                             <label for="message" class="block text-left text-lg font-medium text-slate-700 mb-2">Tin nhắn của bạn</label>
@@ -247,8 +247,8 @@
                     </form>
                     <div class="mt-8 text-left text-slate-700">
                         <p class="mb-2"><span class="font-semibold">Địa chỉ:</span> 123 Đường ABC, Quận XYZ, TP. Hồ Chí Minh, Việt Nam</p>
-                        <p class="mb-2"><span class="font-semibold">Điện thoại:</span> +84 123 456 789</p>
-                        <p><span class="font-semibold">Email:</span> info@itx.com.vn</p>
+                        <p class="mb-2"><span class="font-semibold">Điện thoại:</span> +84775568646</p>
+                        <p><span class="font-semibold">Email:</span> info@itxeasy.com</p>
                     </div>
                 </div>
             </div>
