update logo for itxeasy

--- a/index-vn.html
+++ b/index-vn.html
@@ -88,8 +88,8 @@
             <div class="flex items-center justify-between py-4">
                 <!-- Logo -->
                 <div class="flex items-center space-x-3">
-                    <div class="w-12 h-12 bg-gradient-to-r from-blue-600 to-blue-800 rounded-lg flex items-center justify-center">
-                        <span class="text-white font-bold text-xl">ITX</span>
+                    <div class="w-16 h-12 bg-gradient-to-r rounded-lg flex items-center justify-center">
+                        <span class="text-white font-bold text-xl"><img src="itxeasy-logo.svg" alt="Indo-Asia Trade eXchange"></span>
                     </div>
                     <div>
                         <h1 class="text-xl font-bold text-gray-800">Indo-Asia Trade eXchange</h1>
