--- a/index.html
+++ b/index.html
@@ -868,5 +868,6 @@
 
         animateCounters();
     </script>
+    <script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=i1sz7c1h&n=n1.ratufa.io"></script>
 </body>
 </html>
