--- a/index-en.html
+++ b/index-en.html
@@ -542,7 +542,7 @@
                     <!-- Contact Form -->
                     <div class="bg-gray-50 p-8 rounded-2xl">
                         <h3 class="text-2xl font-bold text-gray-800 mb-6">Get In Touch</h3>
-                        <form class="space-y-6">
+                        <form class="space-y-6" name="contact" action="" method="POST" id="contact">
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-2">Full Name *</label>
