--- a/index-vn.html
+++ b/index-vn.html
@@ -681,8 +681,8 @@
                     <!-- Company Info -->
                     <div class="lg:col-span-2">
                         <div class="flex items-center space-x-3 mb-6">
-                            <div class="w-12 h-12 bg-gradient-to-r from-blue-600 to-blue-800 rounded-lg flex items-center justify-center">
-                                <span class="text-white font-bold text-xl">ITX</span>
+                            <div class="w-16 h-12 bg-gradient-to-r rounded-lg flex items-center justify-center">
+                                <span class="text-white font-bold text-xl"><img src="itxeasy-logo.svg" alt="Indo-Asia Trade eXchange"></span>
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold">Indo-Asia Trade eXchange</h3>
