--- a/index-en.html
+++ b/index-en.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="Vietnam export, Southeast Asia trade, import export, ITX, Indo-Asia Trade Exchange, agricultural products, electronics, textiles, ITXEasy.com, +84775568646">
     <link rel="canonical" href="https://www.itxeasy.com/"> 
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="itxeasy-logo.svg">
+
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:title" content="ITX - Indo-Asia Trade eXchange | Bridging Asia's Trade | ITXEasy.com">
     <meta property="og:description" content="ITX specializes in import-export services and regional trade solutions across Southeast Asia, particularly from Vietnam to the world. Contact us at +84775568646.">
