--- a/index-vn.html
+++ b/index-vn.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="xuất khẩu Việt Nam, nhập khẩu Đông Nam Á, dịch vụ thương mại quốc tế, ITX, Indo-Asia Trade eXchange, xuất nhập khẩu, giải pháp thương mại, nông sản, thủy sản, thủ công mỹ nghệ, ITXEasy.com, +84775568646">
     <link rel="canonical" href="https://www.itxeasy.com/"> 
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="itxeasy-logo.svg">
+
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:title" content="ITX - Indo-Asia Trade eXchange | Kết nối Thương mại Châu Á | ITXEasy.com">
     <meta property="og:description" content="ITX chuyên cung cấp dịch vụ xuất nhập khẩu và giải pháp thương mại khu vực tại Đông Nam Á, đặc biệt từ Việt Nam ra thế giới. Liên hệ +84775568646.">
