--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITX - Indo-Asia Trade eXchange | Bridging Asia's Trade | ITXEasy.com</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="itxeasy-logo.svg">
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="ITX - Newly established import-export company with experienced professionals, specializing in Southeast Asian trade solutions and Vietnam export products to global markets. Visit ITXEasy.com or contact us at +84775568646 for efficient trade solutions.">
     <meta name="keywords" content="Vietnam export, Southeast Asia trade, import export, ITX, Indo-Asia Trade Exchange, agricultural products, electronics, textiles, ITXEasy.com, +84775568646">
