--- a/index.html
+++ b/index.html
@@ -871,6 +871,8 @@
 
         animateCounters();
     </script>
-    </script><script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=jtgq61bk&n=n1.ratufa.io"></script>
+    <script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=jtgq61bk&n=n1.ratufa.io"></script>
+    <script src="./public/switch-language.js" defer></script>
+
 </body>
 </html>
