--- a/index-vn.html
+++ b/index-vn.html
@@ -871,5 +871,6 @@
         animateCounters();
     </script>
     <script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=n1zkv3w5&n=n1.ratufa.io"></script>
+    <script src="./public/switch-language.js" defer></script>
 </body>
 </html>
