--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITX - Indo-Asia Trade eXchange | Bridging Asia's Trade | ITXEasy.com</title>
 
-    <!-- Favicon -->
+    <!-- Favicon itxeasy-->
     <link rel="icon" type="image/svg+xml" href="itxeasy-logo.svg">
 
     <!-- SEO Meta Tags -->
